Arquivo de mémoria atualizando